<resources>
    <string name="app_name">StyleAndThemes</string>
    <string name="tv_tittle_form">Formulario</string>
    <string name="tv_name">Nombre</string>
    <string name="et_name">Escribe tu nombre</string>
    <string name="tv_phone">Telefono</string>
    <string name="et_phone">Escribe tu telefono</string>
    <string name="tv_email">Email</string>
    <string name="et_email">Escribe tu email</string>
    <string name="btn_next">Siguiente</string>
    <string name="click" translatable="false">Click</string>
    <string name="tv_filters">Filtros</string>
    <string name="tv_search">Estoy buscando</string>
    <string name="rb_men">Hombres</string>
    <string name="rb_women">Mujeres</string>
    <string name="dcdsc">Hombres</string>

</resources>