<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/tv_tittle_form"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_name">

        </TextView>

        <EditText
            android:id="@+id/et_name"
            style="@style/edittext_blue"
            android:drawableEnd="@drawable/ic_name"
            android:hint="@string/et_name"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:digits="10"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_phone" />


        <EditText
            android:id="@+id/et_phone"
            style="@style/edittext_blue"
            android:hint="@string/et_phone"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/cursor"
            android:drawableEnd="@drawable/ic_phone" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_email">

        </TextView>

        <EditText
            android:id="@+id/et_email"
            style="@style/edittext_blue"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/et_email" />

    </LinearLayout>

    <Button
        style="@style/button_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>